# finacegpt

./: .env-ref  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 417c41e44cac_initial_schema.py
app/: main.py
app/config/: config.py
app/db_utils/: database.py
app/langgraph/: graph.py  pydantics.py  state.py
app/langgraph/agents/: dblookup_agent.py  intent_agent.py  memory_agent.py  outofscope_agent.py  rephraser_agent.py  summarizer_agent.py  supervisor_agent.py  websearch_agent.py
app/langgraph/tools/: search_tool.py
app/models/: chatmemory.py  chatsession.py  document.py  document_chunk.py
app/prompts/: intent_prompt.py  outofscope_prompt.py  rephraser_prompt.py  summarizer_prompt.py  supervisor_prompt.py
app/routers/: query.py  session.py  upload.py
app/schemas/: comparison_schema.py  document_schema.py  query_schema.py
app/services/: chunker.py  embeddings.py  llm_call.py  query_service.py  retriever.py  session_service.py  upload_service.py
src/: app.py  session_utils.py
