[project]
name = "financegpt"
version = "0.1.0"
description = ""
authors = [
    {name = "mahakgupta-coditas",email = "mahak.gupta@coditas.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langgraph (>=0.5.1,<0.6.0)",
    "groq (>=0.29.0,<0.30.0)",
    "pgvector (>=0.4.1,<0.5.0)",
    "pypdf (>=5.7.0,<6.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "langchain-core (>=0.3.67,<0.4.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "langchain-tavily (>=0.2.6,<0.3.0)",
    "langchain-groq (>=0.3.5,<0.4.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
